Import of KAARE/Padre-Plugin-PerlCritic-0.02 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-PerlCritic
gitpan-cpan-version:      0.02
gitpan-cpan-path:         KAARE/Padre-Plugin-PerlCritic-0.02.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Padre::Plugin::PerlCritic.
 
+0.02  Tue Nov 3 2008
+    - We really only need one menu item
+
 0.01  Tue Nov 3 2008
     - original version
