Import of KAARE/Padre-Plugin-PerlCritic-0.03 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-PerlCritic
gitpan-cpan-version:      0.03
gitpan-cpan-path:         KAARE/Padre-Plugin-PerlCritic-0.03.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Padre::Plugin::PerlCritic.
 
+0.03  Sat Nov 8 2008
+    - Say something when we don't have anything to say
+
 0.02  Tue Nov 3 2008
     - We really only need one menu item
 
