Import of KAARE/Padre-Plugin-PerlCritic-0.06 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-PerlCritic
gitpan-cpan-version:      0.06
gitpan-cpan-path:         KAARE/Padre-Plugin-PerlCritic-0.06.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Padre::Plugin::PerlCritic.
 
+0.06  Sun Feb 01 2009
+    - Update requirement of Padre to 0.26
+    - Update plugin to use API for output window
+
 0.05  Mon Dec 15 2008
     - Wish the output window would stay in one place
 
