--- a/Changes
+++ b/Changes
@@ -1,4 +1,15 @@
-Revision history for Perl extension Padre::Plugin::PerlCritic.
+Revision history for Perl extension Padre-Plugin-PerlCritic.
+
+0.07 Tue Mar 02 2010
+    - Changed build to Module::Install
+    - Added integration with config_perlcritic config entry
+    - Added translations:
+      - French (jquelin)
+      - Polish (therek)
+      - Chinese (Traditional) translation (BLUET)
+      - Arabic (azawawi)
+	  - Spanish (brunov)
+	  - Brazilian Portuguese (garu)
 
 0.06  Sun Feb 01 2009
     - Update requirement of Padre to 0.26
