Import of KAARE/Padre-Plugin-PerlCritic-0.08 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-PerlCritic
gitpan-cpan-version:      0.08
gitpan-cpan-path:         KAARE/Padre-Plugin-PerlCritic-0.08.tar.gz
gitpan-cpan-author:       KAARE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Padre-Plugin-PerlCritic.
 
+    - Turkish translation updated (BURAK)
+    - Compatibility with latest Padre (CHORNY)
+
 0.07 Tue Mar 02 2010
     - Changed build to Module::Install
     - Added integration with config_perlcritic config entry
