--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Padre-Plugin-PerlCritic.
 
+0.09   2010.10.25
+    - Switched to Dist::Zilla (AZAWAWI)
+    - Fixed t/* to work under no DISPLAY (AZAWAWI)
+    - Added Italian translation (SBLADIN)
+    - Updated Arabic translation (AZAWAWI)
+    - Fixed RT #59680: Module::Install included missing (AZAWAWI)
+
+0.08 Tue Jul 27 2010
     - Turkish translation updated (BURAK)
     - Compatibility with latest Padre (CHORNY)
 
@@ -11,8 +19,8 @@ Revision history for Perl extension Padre-Plugin-PerlCritic.
       - Polish (therek)
       - Chinese (Traditional) translation (BLUET)
       - Arabic (azawawi)
-	  - Spanish (brunov)
-	  - Brazilian Portuguese (garu)
+      - Spanish (brunov)
+      - Brazilian Portuguese (garu)
 
 0.06  Sun Feb 01 2009
     - Update requirement of Padre to 0.26
