--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Padre-Plugin-PerlCritic.
 
+0.11   2010.10.29
+    - Removed Test::NeedsDisplay dependency (AZAWAWI)
+
 0.10   2010.10.27
     - Fixed t/01-menu.t to work under no DISPLAY (AZAWAWI)
     - t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)
