--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Padre-Plugin-PerlCritic.
 
+0.12   2010.12.06
+    - Restored missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)
+
 0.11   2010.10.29
     - Removed Test::NeedsDisplay dependency (AZAWAWI)
 
